removed color utils cuz it did not help at all

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- IMPORT PAPER -->
     <script type="text/javascript" src="node_modules/paper/dist/paper-full.js"></script>
     <!-- OTHER IMPORTS -->
-    <script type="text/javascript" src="src/lib/oklch2rgb.js" defer></script>
+    <script type="text/javascript" src="src/lib/util.js" defer></script>
     <!-- MAIN CODE -->
     <script type="text/javascript" src="src/index.js" defer></script>
     <!-- START SCRIPT -->
