preload audio so no lag

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
 </head>
 <body>
-    <audio id="mainAudio" src="src/assets/flash24.mp3" style="visibility: hidden;"></audio>
+    <audio id="mainAudio" preload="auto" src="src/assets/flash24.mp3" style="visibility: hidden;"></audio>
     <button id="startButton" onclick="fullScreener()">empieza!</button>
 	<canvas id="myCanvas" resize></canvas>
 </body>
