--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Hola de Taiwán</title>
     <!-- IMPORT PAPER -->
-    <script type="text/javascript" src="node_modules/paper/dist/paper-full.js"></script>
+    <script type="text/javascript" src="node_modules/paper/dist/paper-full.min.js"></script>
     <!-- OTHER IMPORTS -->
     <script type="text/javascript" src="src/lib/util.js" defer></script>
     <!-- MAIN CODE -->
