--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="node_modules/paper/dist/paper-full.min.js"></script>
     <!-- OTHER IMPORTS -->
     <script type="text/javascript" src="src/lib/util.js" defer></script>
+    <script type="text/javascript" src="src/lib/render.js" defer></script>
     <!-- MAIN CODE -->
     <script type="text/javascript" src="src/index.js" defer></script>
     <!-- START SCRIPT -->
